style.css
  @import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,400,500&display=swap');

  html {
      /*height: 100%;*/
      /*overflow-x: hidden;*/
      scroll-behavior: smooth;
  }   
  
  body {
      font-family: 'Roboto', sans-serif;
      font-weight:100;
      font-size: 1em;
      color: #222;
      height:100%;
      overflow-x: hidden;
      overflow-y: scroll;
  }

  #about-container, 
  #portfolio-container, 
  #contact-container{
    padding-top:70px;
    padding-bottom:70px;
    height:100%;
    }
  
  .header {
      padding-top:15px;
      padding-bottom: 15px;
      /*background: white !important;*/
  }
  
  .logo {
      width:85px;
      height:85px;
      text-align:center;
      margin-bottom:25px;
  }
  
  .logo a {
      display:block;
      border:none;
      text-decoration: none;
      width:105px;
      height:105px;
      background: url(images/logo.png) no-repeat center;
      background-size: 100px 100px;
  }
  
  .home {
      height: 100%; 
      background: url(images/background_pattern.png) #FFEB00;
  }
  
  #headline_row {
      height:100%;
  }
  
  .headline{
      font-size: 3.5em;
      line-height: 1.2em;
  }
  
  .home-image {
      height:100%;
  }
  
  .jumbotron {
      background:none;
  }  
 
 .jumbotron h1.display-1 {
    font-weight: 500;
    letter-spacing: -0.02em;
    font-size:8em;
    line-height: 0.8em;
}

 #navi {
    z-index: 1030;
    padding-left:50px;
    padding-top:100px;
    position: fixed;
    min-width: 20%;
    text-align:center;
}

.nav {
    font-weight:300;
    letter-spacing: 0.05em;
    font-size: 1.5em;
}

.nav li a:link {
    color: #4d4d4d; 
    font-size:1.1em;
}

.nav li a:visited {
    color: #4d4d4d;
}

.nav li a:hover{
    color:#4EB9B1;
}

.nav-pills .nav-link.active {
    background:transparent !important; 
    color:#FFEB00;

}

 #social-links ul {
    margin:0;
    padding:0;
}

#social-links li a {
    width:25px;
    height:25px;
    background-size:22px;
    background-repeat:no-repeat;
    background-position: center;
    /*border:1px solid blue;*/
    display:block;

}

#social-instagram a {
    background-image: url(images/Icon-awesome-instagram.png);
}
#social-instagram a:hover {
    background-image: url(images/Icon-awesome-instagram-hover.png);
}
#social-behance a {
    background-image: url(images/Icon-awesome-behance-square.png);
}
#social-behance a:hover {
    background-image: url(images/Icon-awesome-behance-square-hover.png);
}
#social-linkedin a {
    background-image: url(images/Icon-awesome-linkedin.png);
}
#social-linkedin a:hover {
    background-image: url(images/Icon-awesome-linkedin-hover.png);
}
 
.about {
    background: #6EDDD4;
    height:100%;
    min-height:100%;
}

.bg-turquois {
    background: #6EDDD4;
}

h1 {
    font-size:4em;
    font-weight: 500 !important;
    text-transform: uppercase;
}
 
 h2{
     font-weight:100;
     text-transform: uppercase;
 }
 
 .thin-font{
    font-weight:100 !important;
}

 .white {
     color:#fff;
 }
 
 .yellow {
     color:#FFEB00;
 }
 
 mark {
    background-color: #FFEB00;
}

.white-bg{
    background-color: white;
}


#skills p{
    font-size:2.5em;
}

#software p{
    font-size:1.3em;
}
 
.portfolio{
    height:100%;
    min-height:100%;
    background-color:#FC7BA6;
}

.portfolio .card {
    max-width:750px;
}
.portfolio .card-body {
    background-color: #FFEB00;
    max-width:750px;
}
.portfolio .card img{
    /*width:205px;*/
    overflow:hidden;
}

.portfolio .card-title{
    font-weight:100;
    font-style:italic;
}

.card-number {    
    font-style:oblique;
}
 
 
 .contact{
     height:100%;
     min-height:100%;
     background-color:#F2880C;
 }
 
 
 .btn, .btn-primary {
     background-color:#FFEB00;
     border:none;
     color:#4d4d4d;
 
 }
 a:visited, a:link  {
     color:#444;
 }

 a:hover {
     text-decoration: none;
     color:#FFF;
 }

 a.btn:link, a.btn:visited {
     color:#4d4d4d;
 }
 
 a.btn:hover, .btn:hover{
     background-color: #4EB9B1;
     color:#FFF;
 }
 

 .footer {
     font-size:0.8em;
     text-align:center;
     padding:20px 0;
     background-color: #444;
     color: #FFF;
 }
 


 /* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other */
 /* @media screen and (max-width: 360px) {
     .headline{
         font-size: 3em;
     }
 } */
 
 /* Extra small devices (portrait phones, less than 576px)*/
 @media (max-width: 575.98px) { 
     html{
         height:auto;
         overflow-x:hidden;
     }
 
     body {
         height:auto;
         font-size:0.85em;
     }
     .home {
         height: auto; 
     }
 

    #about-container, 
    #portfolio-container, 
    #contact-container{
        padding:30px 10px !important;
        height:auto;
        margin:0 !important; 
    }
  
     #about-container, 
     #porfolio-container{
     }
     
     /* div {
         display: inline-block;
     } */

     #navi {
        /*z-index: 1030;*/
        /*padding-left:50px;*/
        padding-top:20px;
        position: relative;
        text-align:center;
        font-size: 0.9em;
    }
    
    .jumbotron h1.display-1 {
        font-weight: 500;
        letter-spacing: -0.02em;
        font-size:6em;
        line-height: 0.8em;
    }

    #social-links ul {

        text-align: center;
    }

    .portfolio .card-body, .portfolio .card  {
        min-width:350px;
        max-width:350px;
    }
   {
    }
    .logo {
        width:85px;
        height:85px;
        text-align:center;
        margin-bottom:15px;
        position:fixed;

    }
    
    .logo a {
        display:block;
        border:none;
        text-decoration: none;
        width:85px;
        height:85px;
        background: url(images/logo.png) no-repeat center;
        background-size: 80px 80px;
    }

    
 }
 

